Complete professional hockeys club

--- a/index.html
+++ b/index.html
@@ -97,7 +97,87 @@
         </p>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Professional Hockeys Club -->
+      <section>
+        <div class="flex flex-col justify-center items-center mt-52">
+          <h1 class="font-extrabold text-4xl text-black">
+            Professional Hockeys Club
+          </h1>
+          <p class="mt-6 w-[607px] text-center font-semibold text-gray-500">
+            Within the intense world of professional hockey clubs, skillful
+            athletes unite under a common emblem, carving a legacy of precision,
+            strategy, and shared triumphs on the ice.
+          </p>
+        </div>
+        <div
+          class="flex flex-col justify-center items-center lg:flex-row gap-24 mt-20 text-center"
+        >
+          <div>
+            <div
+              class="radial-progress text-[#FF4240]"
+              style="--value: 87"
+              role="progressbar"
+            >
+              87%
+            </div>
+            <h2 class="py-4 font-semibold text-black text-xl">
+              Prayer Facility
+            </h2>
+            <p class="w-[250px] font-semibold text-gray-500">
+              A sacred space for spiritual reflection and connection through
+              prayer.
+            </p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-[#49D293]"
+              style="--value: 95"
+              role="progressbar"
+            >
+              95%
+            </div>
+            <h2 class="font-semibold py-4 text-black text-xl">
+              Experienced Coach
+            </h2>
+            <p class="w-[250px] font-semibold text-gray-500">
+              A seasoned guide, shaping athlete excellence with skill and
+              wisdom.
+            </p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-[#ead942]"
+              style="--value: 70"
+              role="progressbar"
+            >
+              70%
+            </div>
+            <h2 class="font-semibold py-4 text-black text-xl">Senior Player</h2>
+            <p class="w-[250px] font-semibold text-gray-500">
+              A seasoned athlete, embodying skill, leadership, and a wealth of
+              on-field experience.
+            </p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-[#4C8DF1]"
+              style="--value: 70"
+              role="progressbar"
+            >
+              70%
+            </div>
+            <h2 class="font-semibold py-4 text-black text-xl">
+              Training Ground
+            </h2>
+            <p class="w-[250px] font-semibold text-gray-500">
+              The crucible of champions, where skills are honed and athletes
+              forge their path to greatness.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
