Complete program Section

--- a/index.html
+++ b/index.html
@@ -177,6 +177,74 @@
           </div>
         </div>
       </section>
+      <!-- Program Sections -->
+      <section>
+        <div class="flex flex-col justify-center items-center mt-52">
+          <h1 class="font-extrabold text-4xl text-black">
+            Professional Hockeys Club
+          </h1>
+          <p class="mt-6 w-[607px] text-center font-semibold text-gray-500">
+            Professional Hockey Clubs: Where skill meets passion, forging a
+            legacy of teamwork and triumph on the icy stage of competition.
+          </p>
+        </div>
+        <!-- Program Card Section -->
+        <div class="flex flex-col lg:flex-row justify-center gap-5 mt-16">
+          <div class="card max-w-xl bg-base-100 shadow-xl image-full">
+            <figure><img src="images/2.png" alt="Junior Program" /></figure>
+            <div class="card-body mt-24">
+              <h2 class="card-title">Junior Program</h2>
+              <p>
+                Nurturing young talents, instilling passion, and shaping the
+                future generation of champions through dedicated mentorship and
+                skill development.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-error bg-[#FF4240] text-white">
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card max-w-xl bg-base-100 shadow-xl image-full">
+            <figure><img src="images/3.png" alt="Junior Program" /></figure>
+            <div class="card-body mt-24">
+              <h2 class="card-title">Teenager Program</h2>
+              <p>
+                Fostering athletic potential and personal growth in young
+                individuals, the program combines skill-building with mentorship
+                to shape confident and resilient teenagers in the world of
+                sports.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-error bg-[#FF4240] text-white">
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center mt-5">
+          <div class="card max-w-6xl bg-base-100 shadow-xl image-full">
+            <figure><img src="images/4.png" alt="Junior Program" /></figure>
+            <div class="card-body mt-24">
+              <h2 class="card-title mt-24">Professional Program</h2>
+              <p class="max-w-xl">
+                Nurturing young talents, instilling passion, and shaping the
+                future generation of champions through dedicated mentorship and
+                skill development.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-error bg-[#FF4240] text-white">
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- our new product section -->
+      <section></section>
     </main>
     <footer></footer>
   </body>
