Our new section card

--- a/index.html
+++ b/index.html
@@ -180,12 +180,10 @@
       <!-- Program Sections -->
       <section>
         <div class="flex flex-col justify-center items-center mt-52">
-          <h1 class="font-extrabold text-4xl text-black">
-            Professional Hockeys Club
-          </h1>
+          <h1 class="font-extrabold text-4xl text-black">Program Sections</h1>
           <p class="mt-6 w-[607px] text-center font-semibold text-gray-500">
-            Professional Hockey Clubs: Where skill meets passion, forging a
-            legacy of teamwork and triumph on the icy stage of competition.
+            Where skill meets passion, forging a legacy of teamwork and triumph
+            on the icy stage of competition.
           </p>
         </div>
         <!-- Program Card Section -->
@@ -244,7 +242,53 @@
         </div>
       </section>
       <!-- our new product section -->
-      <section></section>
+      <section>
+        <div class="flex flex-col justify-center items-center mt-52">
+          <h1 class="font-extrabold text-4xl text-black">Our New Products</h1>
+          <p class="mt-6 w-[607px] text-center font-semibold text-gray-500">
+            Elevate your game with our latest innovations, designed to enhance
+            performance, durability, and style on the ice. Discover cutting-edge
+            gear that redefines the essence of hockey excellence.
+          </p>
+        </div>
+        <!-- Our new product section card -->
+        <div>
+          <div class="hero max-w-xl h-56">
+            <div class="hero-content flex-col lg:flex-row">
+              <img src="images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <div class="gap-2">
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/star.png" alt="" />
+                    <p class="text-2xl font-extrabold">5.0</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/eye.png" alt="" />
+                    <p class="text-2xl font-extrabold">20</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/love.png" alt="" />
+                    <p class="text-2xl font-extrabold">200</p>
+                  </div>
+                </div>
+                <h1 class="text-xl font-extrabold text-black">
+                  World Cup Flags Football
+                </h1>
+                <p class="font-medium">
+                  A thrilling fusion of global competition and soccer finesse.
+                </p>
+                <div class="flex gap-2">
+                  <p class="font-extrabold text-[#FF4240]">Price - $22.00</p>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/cart.png" alt="" />
+                    <p>Delivery Fee : Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
