Complete our new product section

--- a/index.html
+++ b/index.html
@@ -251,24 +251,200 @@
             gear that redefines the essence of hockey excellence.
           </p>
         </div>
-        <!-- Our new product section card -->
-        <div>
-          <div class="hero max-w-xl h-56">
+        <!-- Our new product section card colum 1 -->
+        <div class="flex justify-center gap-7">
+          <div class="hero max-w-xl h-56 bg-white border-stone-300">
             <div class="hero-content flex-col lg:flex-row">
               <img src="images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
               <div>
                 <div class="gap-2">
                   <div class="inline-flex">
                     <img class="w-6 h-6" src="icons/star.png" alt="" />
-                    <p class="text-2xl font-extrabold">5.0</p>
+                    <p class="font-extrabold">5.0</p>
                   </div>
                   <div class="inline-flex">
                     <img class="w-6 h-6" src="icons/eye.png" alt="" />
-                    <p class="text-2xl font-extrabold">20</p>
+                    <p class="font-extrabold">20</p>
                   </div>
                   <div class="inline-flex">
                     <img class="w-6 h-6" src="icons/love.png" alt="" />
-                    <p class="text-2xl font-extrabold">200</p>
+                    <p class="font-extrabold">200</p>
+                  </div>
+                </div>
+                <h1 class="text-xl font-extrabold text-black">
+                  World Cup Flags Football
+                </h1>
+                <p class="font-medium">
+                  A thrilling fusion of global competition and soccer finesse.
+                </p>
+                <div class="flex gap-2">
+                  <p class="font-extrabold text-[#FF4240]">Price - $22.00</p>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/cart.png" alt="" />
+                    <p>Delivery Fee : Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="hero max-w-xl h-56">
+            <div class="hero-content flex-col lg:flex-row">
+              <img src="images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <div class="gap-2">
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/star.png" alt="" />
+                    <p class="font-extrabold">5.0</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/eye.png" alt="" />
+                    <p class="font-extrabold">20</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/love.png" alt="" />
+                    <p class="font-extrabold">200</p>
+                  </div>
+                </div>
+                <h1 class="text-xl font-extrabold text-black">
+                  World Cup Flags Football
+                </h1>
+                <p class="font-medium">
+                  A thrilling fusion of global competition and soccer finesse.
+                </p>
+                <div class="flex gap-2">
+                  <p class="font-extrabold text-[#FF4240]">Price - $22.00</p>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/cart.png" alt="" />
+                    <p>Delivery Fee : Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Our new product section card colum 2 -->
+        <div class="flex justify-center gap-7">
+          <div class="hero max-w-xl h-56 bg-white border-stone-300">
+            <div class="hero-content flex-col lg:flex-row">
+              <img src="images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <div class="gap-2">
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/star.png" alt="" />
+                    <p class="font-extrabold">5.0</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/eye.png" alt="" />
+                    <p class="font-extrabold">20</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/love.png" alt="" />
+                    <p class="font-extrabold">200</p>
+                  </div>
+                </div>
+                <h1 class="text-xl font-extrabold text-black">
+                  Cap For Hockeys
+                </h1>
+                <p class="font-medium">
+                  A thrilling fusion of global competition and soccer finesse.
+                </p>
+                <div class="flex gap-2">
+                  <p class="font-extrabold text-[#FF4240]">Price - $22.00</p>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/cart.png" alt="" />
+                    <p>Delivery Fee : Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="hero max-w-xl h-56">
+            <div class="hero-content flex-col lg:flex-row">
+              <img src="images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <div class="gap-2">
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/star.png" alt="" />
+                    <p class="font-extrabold">5.0</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/eye.png" alt="" />
+                    <p class="font-extrabold">20</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/love.png" alt="" />
+                    <p class="font-extrabold">200</p>
+                  </div>
+                </div>
+                <h1 class="text-xl font-extrabold text-black">
+                  World Cup Flags Football
+                </h1>
+                <p class="font-medium">
+                  A thrilling fusion of global competition and soccer finesse.
+                </p>
+                <div class="flex gap-2">
+                  <p class="font-extrabold text-[#FF4240]">Price - $22.00</p>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/cart.png" alt="" />
+                    <p>Delivery Fee : Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Our new product section card colum 3 -->
+        <div class="flex justify-center gap-7">
+          <div class="hero max-w-xl h-56 bg-white border-stone-300">
+            <div class="hero-content flex-col lg:flex-row">
+              <img src="images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <div class="gap-2">
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/star.png" alt="" />
+                    <p class="font-extrabold">5.0</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/eye.png" alt="" />
+                    <p class="font-extrabold">20</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/love.png" alt="" />
+                    <p class="font-extrabold">200</p>
+                  </div>
+                </div>
+                <h1 class="text-xl font-extrabold text-black">
+                  World Cup Flags Football
+                </h1>
+                <p class="font-medium">
+                  A thrilling fusion of global competition and soccer finesse.
+                </p>
+                <div class="flex gap-2">
+                  <p class="font-extrabold text-[#FF4240]">Price - $22.00</p>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/cart.png" alt="" />
+                    <p>Delivery Fee : Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="hero max-w-xl h-56">
+            <div class="hero-content flex-col lg:flex-row">
+              <img src="images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <div class="gap-2">
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/star.png" alt="" />
+                    <p class="font-extrabold">5.0</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/eye.png" alt="" />
+                    <p class="font-extrabold">20</p>
+                  </div>
+                  <div class="inline-flex">
+                    <img class="w-6 h-6" src="icons/love.png" alt="" />
+                    <p class="font-extrabold">200</p>
                   </div>
                 </div>
                 <h1 class="text-xl font-extrabold text-black">
