Footer section Complete

--- a/index.html
+++ b/index.html
@@ -466,6 +466,45 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer p-10 bg-black text-base-content">
+      <aside class="px-36">
+        <h2 class="text-white font-extrabold text-3xl">Get In Touch</h2>
+        <p class="max-w-80 text-slate-400">
+          Connect with us effortlessly to explore opportunities, share ideas, or
+          seek assistance. Your inquiries are our priority, and we look forward
+          to hearing from you soon.
+        </p>
+        <div>
+          <div class="flex gap-3 mb-3">
+            <img class="w-6 h-6" src="icons/gmail.png" alt="" />
+            <p class="max-w-80 text-slate-400">hockeys@support.com</p>
+          </div>
+          <div class="flex gap-3">
+            <img class="w-6 h-6" src="icons/call.png" alt="" />
+            <p class="max-w-80 text-slate-400">(+62) 123-321-543</p>
+          </div>
+        </div>
+      </aside>
+      <nav class="max-w-80 text-slate-400">
+        <header class="footer-title">Services</header>
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav>
+      <nav class="max-w-80 text-slate-400">
+        <header class="footer-title">Company</header>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav class="max-w-80 text-slate-400">
+        <header class="footer-title">Legal</header>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+    </footer>
   </body>
 </html>
