--- a/index.html
+++ b/index.html
@@ -486,24 +486,27 @@
         </div>
       </aside>
       <nav class="max-w-80 text-slate-400">
-        <header class="footer-title">Services</header>
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
-      </nav>
-      <nav class="max-w-80 text-slate-400">
-        <header class="footer-title">Company</header>
+        <header class="footer-title font-bold text-white">Company</header>
         <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
+        <a class="link link-hover">Leadership</a>
+        <a class="link link-hover">Careers</a>
+        <a class="link link-hover">News & Article</a>
+        <a class="link link-hover">Legal Notice</a>
       </nav>
       <nav class="max-w-80 text-slate-400">
-        <header class="footer-title">Legal</header>
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
+        <header class="footer-title font-bold text-white">Support</header>
+        <a class="link link-hover">Help Center</a>
+        <a class="link link-hover">FAQ</a>
+        <a class="link link-hover">Ticket Support</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+      <nav class="max-w-80 text-slate-400">
+        <header class="footer-title font-bold text-white">Services</header>
+        <a class="link link-hover">Academy</a>
+        <a class="link link-hover">Group Lessons</a>
+        <a class="link link-hover">Private Lessons</a>
+        <a class="link link-hover">Hockeys for Kids</a>
+        <a class="link link-hover">Hockeys for Adult</a>
       </nav>
     </footer>
   </body>
