Complete Clients Question Section

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
           </div>
         </div>
         <div class="flex justify-center mt-5">
-          <div class="card max-w-6xl bg-base-100 shadow-xl image-full">
+          <div
+            class="card max-w-xl lg:max-w-6xl bg-base-100 shadow-xl image-full"
+          >
             <figure><img src="images/4.png" alt="Junior Program" /></figure>
             <div class="card-body mt-24">
               <h2 class="card-title mt-24">Professional Program</h2>
@@ -465,8 +467,87 @@
           </div>
         </div>
       </section>
+      <!-- Clients Questions -->
+      <section>
+        <div class="flex flex-col justify-center items-center mt-52">
+          <h1 class="font-extrabold text-4xl text-black">Clients Question</h1>
+          <p class="mt-6 w-[607px] text-center font-semibold text-gray-500">
+            Your inquiries drive our commitment to clarity and excellence, as we
+            strive to provide swift and comprehensive answers to ensure your
+            satisfaction and success.
+          </p>
+        </div>
+        <div
+          class="flex flex-col lg:flex-row justify-center items-center mt-28 gap-10"
+        >
+          <div class=""><img src="images/question.png" alt="" /></div>
+          <div class="">
+            <!-- Accordion-1  -->
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-bold">Our Equipment</div>
+              <div class="collapse-content">
+                <p>
+                  Precision, durability, and performance—empowering athletes for
+                  excellence.
+                </p>
+              </div>
+            </div>
+            <!-- Accordion-2  -->
+            <div class="collapse collapse-plus bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">
+                Hockey Training
+              </div>
+              <div class="collapse-content">
+                <p>Precision, passion, champions in the making.</p>
+              </div>
+            </div>
+            <!-- Accordion-3  -->
+            <div class="collapse collapse-plus bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">
+                Private Lessons
+              </div>
+              <div class="collapse-content">
+                <p>Tailored coaching for personalized excellence.</p>
+              </div>
+            </div>
+            <!-- Accordion-4  -->
+            <div class="collapse collapse-plus bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">Ski Touring</div>
+              <div class="collapse-content">
+                <p>
+                  Conquer peaks, embrace adventure, and explore snowy landscapes
+                  on a thrilling ski expedition.
+                </p>
+              </div>
+            </div>
+            <!-- Accordion-5  -->
+            <div class="collapse collapse-plus bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">Booking</div>
+              <div class="collapse-content">
+                <p>Swift, seamless, and stress-free. Your spot, your way.</p>
+              </div>
+            </div>
+            <!-- Accordion-6  -->
+            <div class="collapse collapse-plus bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-bold">Pricings</div>
+              <div class="collapse-content">
+                <p>
+                  Clear, fair, and designed to suit you. Quality made
+                  affordable.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer class="footer p-10 bg-black text-base-content">
+    <footer class="footer mt-14 p-10 bg-black text-base-content">
       <aside class="px-36">
         <h2 class="text-white font-extrabold text-3xl">Get In Touch</h2>
         <p class="max-w-80 text-slate-400">
