Final Project Submission to git-hub

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     </nav>
 
     <!-- Banner Section -->
-    <header class="relative">
+    <header class="">
       <!-- Banner section -->
       <div class="flex justify-center items-center mt-36">
-        <div class="carousel max-w-6xl lg:h-[550px]">
+        <div class="carousel relative max-w-6xl lg:h-[550px]">
           <div id="slide1" class="carousel-item relative w-full">
             <img src="images/1.png" class="w-full" />
             <div
@@ -137,19 +137,18 @@
               <a href="#slide1" class="btn btn-circle">❯</a>
             </div>
           </div>
+          <div
+            class="p-8 bg-black max-w-lg rounded-2xl absolute right-[5%] bottom-[9%]"
+          >
+            <h2 class="font-extrabold text-2xl text-white">
+              Meet all the heroes from the field
+            </h2>
+            <p class="max-w-lg text-white mt-4">
+              In the arena of valor, where courage and strength unite, meet the
+              heroes who illuminate the field with their indomitable spirit.
+            </p>
+          </div>
         </div>
-      </div>
-
-      <div
-        class="p-8 bg-black max-w-lg rounded-2xl absolute lg:right-[33%] bottom-[9%]"
-      >
-        <h2 class="font-extrabold text-2xl text-white">
-          Meet all the heroes from the field
-        </h2>
-        <p class="max-w-lg text-white mt-4">
-          In the arena of valor, where courage and strength unite, meet the
-          heroes who illuminate the field with their indomitable spirit.
-        </p>
       </div>
     </header>
     <main>
